[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auto-factory-tod-env"
version = "1.0.0"
description = "RL environment for factory production scheduling (time-of-day tariffs)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",      # async test client for FastAPI
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_env*"]

# ---------------------------------------------------------------------------
# Run the server
# ---------------------------------------------------------------------------
[project.scripts]
factory-server = "server.app:app"   # launch via: uvicorn server.app:app --reload

# ---------------------------------------------------------------------------
# Linting / formatting (ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# ---------------------------------------------------------------------------
# Type checking (mypy)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
